# archery-sight

./: LICENSE  README.md  pyproject.toml
.github/workflows/: linting.yaml
archerysight/: arrow.py  constants.py  root_finding.py  sight_functions.py  trajectories.py
