[build-system]
requires = ["setuptools >= 61"]
build-backend = "setuptools.build_meta"

[project]
name = "archerysight"
version = "0.1.0"
description = "A collection of archery sight mark routines in python"
authors = [
  { name="Jack Atkinson", email="jack.atkinson1000@gmail.com" },
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Natural Language :: English",
    "Development Status :: 3 - Alpha",
#    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "numpy>=1.20.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.2.0",
]
lint = [
    "black>=22.12.0",
    "pylint",
    "mypy>=1.0.0",
    "coverage",
    "pytest>=7.2.0",
]

[project.urls]
"Homepage" = "https://github.com/jatkinson1000/archery-sight"
"Bug Tracker" = "https://github.com/jatkinson1000/archery-sight/Issues"

[tool.setuptools]
# By default, include-package-data is true in pyproject.toml, so you do
# NOT have to specify this line.
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]  # list of folders that contain the packages (["."] by default)
include = ["archerysight", "archerysight.*"]  # package names should match these glob patterns (["*"] by default)
exclude = ["archerysight.tests*", "examples.py"]  # exclude packages matching these glob patterns (empty by default)
namespaces = false  # to disable scanning PEP 420 namespaces (true by default)

[tool.mypy]
warn_unused_configs = true
plugins = ["numpy.typing.mypy_plugin"]
